--- a/upload.html
+++ b/upload.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    Swage
+    Sqmager
   </head>
   <body>
-    <form action="/swage" enctype="multipart/form-data" method="post">
+    <form action="/convert" enctype="multipart/form-data" method="post">
       <div><label>Image:</label></div>
       <div><input type="file" name="image" /></div>
       <div><label>Left:</label></div>
@@ -14,6 +14,6 @@
       <div><input type="text" name="output_size" /></div>
       <div><label>Select Size:</label></div>
       <div><input type="text" name="select_size" /></div>
-      <div><input type="submit" value="Swage"></div>
+      <div><input type="submit" value="Convert"></div>
   </body>
 </html>
