Add how to image

--- a/upload.html
+++ b/upload.html
@@ -10,10 +10,12 @@
       <div><input type="text" name="left" /></div>
       <div><label>Top:</label></div>
       <div><input type="text" name="top" /></div>
-      <div><label>Output Size:</label></div>
-      <div><input type="text" name="output_size" /></div>
       <div><label>Select Size:</label></div>
       <div><input type="text" name="select_size" /></div>
+      <div><label>Output Size:</label></div>
+      <div><input type="text" name="output_size" /></div>
       <div><input type="submit" value="Convert"></div>
+    </form>
+    <div><img src="/static/sqmager_how_to.jpg"></div>
   </body>
 </html>
