--- a/upload.html
+++ b/upload.html
@@ -1,21 +1,29 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    Sqmager
+    <title>Sqmager</title>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load("prototype", "1.6.0.3");
+      google.load("scriptaculous", "1.8.2");
+    </script>
+    <script src="/static/cropper.js" type="text/javascript"></script>
+    <script src="/static/application.js" type="text/javascript"></script>
   </head>
   <body>
+    <div><img src="/image?key={{key}}" id="cropper_img"></div>
+    <div id="preview"></div>
     <form action="/convert" enctype="multipart/form-data" method="post">
-      <div><label>Image:</label></div>
-      <div><input type="file" name="image" /></div>
+      <div><input type="hidden" name="key" value="{{key}}" /></div>
       <div><label>Left:</label></div>
-      <div><input type="text" name="left" /></div>
+      <div><input type="text" name="left" id="left" /></div>
       <div><label>Top:</label></div>
-      <div><input type="text" name="top" /></div>
+      <div><input type="text" name="top" id="top" /></div>
       <div><label>Select Size:</label></div>
-      <div><input type="text" name="select_size" /></div>
+      <div><input type="text" name="select_size" id="select_size" /></div>
       <div><label>Output Size:</label></div>
-      <div><input type="text" name="output_size" /></div>
+      <div><input type="text" name="output_size" value="48" disable="disable"/></div>
       <div><input type="submit" value="Convert"></div>
     </form>
-    <div><img src="/static/sqmager_how_to.jpg"></div>
   </body>
 </html>
